DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
May-24-2006 patrick     Changed the names of the versioned header and data
                        directories to use the pre-1.1.10 naming convention
                        (gadgeteer-<version> instead of gadget-<version>).
                        NEW VERSION: 1.1.12
May-24-2006 patrick     Added gadget::getDefaultPluginRoot(), which provides
                        a version-specific path to the directory containing
                        the base set of Gadgeteer plug-ins.
                        NEW VERSION: 1.1.11
May-23-2006 dshipton    Added version information to data directory
                        NEW VERSION: 1.1.10
May-23-2006 dshipton    Changed the static and shared library names to include
                        the version as part of the base library name
                        NEW VERSION: 1.1.9
May-12-2005 patrick     Updated to VPR 1.1.20 and removed all exception
                        specifications except those that are required by a
                        base class.
                        NEW VERSION: 1.1.8
Feb-15-2006 patrickh    Updated to VPR 1.1.16.
                        NEW VERSION: 1.1.7
Nov-12-2005 patrickh    Updated to VPR 1.1.10.
                        NEW VERSION: 1.1.6
Oct-26-2005 patrickh    gadget::MouseEvent objects on Windows now have correct
                        key press state information.
                        Submitted by: Juan Hernando
                        NEW VERSION: 1.1.5
Aug-24-2005 patrickh    Updated to VPR 1.1.7.
                        NEW VERSION: 1.1.4
Jul-11-2005 patrickh    Removed the methods gadget::Proxy::isStupified() and
                        gadget::Proxy::stupify(), both of which are mis-spelled
                        and have been deprecated since 0.92.1.
                        NEW VERSION: 1.1.3
Jul-11-2005 patrickh    Updated to VPR 1.1.3.